apps/entangled-frontend/prod/networking/routes/httproute-entangled-frontend-prod-web-redirect.yaml
# HTTPRoute for HTTP to HTTPS redirect for entangled-frontend prod.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-entangled-frontend-prod-web-redirect
  namespace: entangled-frontend
spec:
  parentRefs:
  - name: prod-gateway-entangled-frontend-prod-web
    namespace: entangled-frontend
    sectionName: http
  hostnames:
  - entangled.cardano.vip
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
