apps/entangled-frontend/prod/networking/routes/httproute-entangled-frontend-prod-web.yaml
# HTTPRoute main route for HTTPS traffic to entangled-frontend prod.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-entangled-frontend-prod-web
  namespace: entangled-frontend
spec:
  parentRefs:
    - name: prod-gateway-entangled-frontend-prod-web
      namespace: entangled-frontend
      sectionName: https-cardano-vip
    - name: prod-gateway-entangled-frontend-prod-web
      namespace: entangled-frontend
      sectionName: https-e7d-tech
  hostnames:
    - entangled.cardano.vip
    - e7d.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prod-service-entangled-frontend-web
          port: 80
