apps/entangled-frontend/prod/networking/routes/httproute-entangled-frontend-prod-www-redirect.yaml
# HTTPRoute to redirect https://www.e7d.tech to https://e7d.tech.
# HTTP redirect is handled globally by Traefik.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-entangled-frontend-prod-www-redirect
  namespace: entangled-frontend
spec:
  parentRefs:
  - name: prod-gateway-entangled-frontend-prod-web
    namespace: entangled-frontend
    sectionName: https-www-e7d-tech
  hostnames:
  - www.e7d.tech
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: e7d.tech
        statusCode: 301
